<resources>
    <string name="app_name">PILIT</string>
    <string name="menu_pill_list">list</string>
    <string name="menu_pill_add">add</string>
    <string name="menu_calendar">calendar</string>
    <string name="hello_blank_fragment">hello blank fragment</string>
    <string name="complete">완료</string>
    <string name="confirm">확인</string>
    <string name="count">회</string>
    <string name="am">오전</string>
    <string name="pm">오후</string>

    <!-- Join -->
    <string name="join_message">만나서 반가워요!\n닉네임을 설정해볼까요?</string>
    <string name="join_nickname_hint">닉네임</string>
    <string name="join_nickname_error">*이미 등록된 닉네임입니다.</string>
    <string name="join_nickname_empty">닉네임을 입력해주세요!</string>

    <!-- Notification -->
    <string name="notification_channel_id">Channel_Id</string>
    <string name="notification_channel_name">약 복용 알림</string>

    <!-- Pill List -->
    <string name="pill_list_greeting_message_1">님,</string>
    <string name="pill_list_greeting_message_2">오늘도 건강하세요!</string>
    <string name="pill_list_today_pill_message_1">오늘의 영양제&#160;</string>
    <string name="pill_list_today_pill_message_2">건</string>
    <string name="pill_list_today_pill_zero_message">영양제를 등록하고\n매일 섭취 관리해보세요 :)</string>
    <string name="pill_list_today_pill_zero_add_message">영양제 등록하기</string>
    <string name="menu_pill_option_edit">수정</string>
    <string name="menu_pill_option_delete">삭제</string>

    <!-- Add Pill -->
    <string name="add_pill_title">약 추가하기</string>
    <string name="add_pill_medicine_name_subheading">약 추가</string>
    <string name="add_pill_medicine_name_hint">약 이름을 알려주세요</string>
    <string name="add_pill_intake_amount_subheading">섭취량</string>
    <string name="add_pill_intake_amount_init_count">1</string>
    <string name="add_pill_intake_time_subheading">섭취 시간</string>
    <string name="add_pill_intake_time_init_count">1회</string>
    <string name="add_pill_default_alarm_am_pm">오전</string>
    <string name="add_pill_default_alarm_time">8:00</string>
    <string name="add_pill_repetition_subheading">반복</string>
    <string name="add_pill_repetition_option_sun">일</string>
    <string name="add_pill_repetition_option_mon">월</string>
    <string name="add_pill_repetition_option_tue">화</string>
    <string name="add_pill_repetition_option_wed">수</string>
    <string name="add_pill_repetition_option_thu">목</string>
    <string name="add_pill_repetition_option_fri">금</string>
    <string name="add_pill_repetition_option_sat">토</string>
    <string name="add_pill_push_subheading">푸시알림</string>

    <!-- Edit Pill -->
    <string name="edit_pill_title">수정</string>

    <!-- Calendar -->
    <string name="calendar_date">2022년 5월</string>
    <string name="calendar_record_title">섭취기록</string>
    <string name="calendar_record_pill_name">약 이름</string>
    <string name="calendar_record_intake_time">오전 8:00</string>
    <string name="calendar_intake_complete">섭취완료</string>
    <string name="calendar_record_date">%02d월 %02d일</string>
    <string name="calendar_title_year_month">%d년 %02d월</string>

    <!-- Description -->
    <string name="description_calendar_left">지난 달로 넘어감</string>
    <string name="description_calendar_right">다음 달로 넘어감</string>
    <string name="description_calendar_tooltip">툴팁 팝업</string>
    <string name="description_tooltip_eaten">먹은 필로 이미지</string>
    <string name="description_tooltip_not_eaten">안 먹은 필로 이미지</string>
    <string name="description_record_eat">복용 상태 변경</string>
    <string name="description_empty">비어있는 영양제</string>

    <!-- Tooltip -->
    <string name="tooltip_content">복용 여부에 따라 필로의 표정이 달라져요!</string>
    <string name="tooltip_eaten">먹었어요</string>
    <string name="tooltip_not_eaten">안 먹었어요</string>
    <string name="calendar_record_empty">아직 등록된 영양제가 없어요.\n섭취 알람 등록하고 매일 섭취 관리해보세요.</string>
    <string name="calendar_record_add">알람 등록하기</string>
</resources>