<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_previous_month"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="14dp"
        android:contentDescription="@string/description_calendar_left"
        app:layout_constraintTop_toTopOf="@+id/tv_calendar_title"
        app:layout_constraintBottom_toBottomOf="@+id/tv_calendar_title"
        app:layout_constraintEnd_toStartOf="@+id/tv_calendar_title"
        app:srcCompat="@drawable/ic_chevron_left" />

    <TextView
        android:id="@+id/tv_calendar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/calendar_date"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_next_month"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="14dp"
        android:contentDescription="@string/description_calendar_right"
        app:layout_constraintTop_toTopOf="@+id/tv_calendar_title"
        app:layout_constraintBottom_toBottomOf="@+id/tv_calendar_title"
        app:layout_constraintStart_toEndOf="@+id/tv_calendar_title"
        app:srcCompat="@drawable/ic_chevron_right" />

    <com.kizitonwose.calendarview.CalendarView
        android:id="@+id/calendar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="7dp"
        app:cv_dayViewResource="@layout/calendar_day_layout"
        app:cv_monthHeaderResource="@layout/item_calendar_header"
        app:cv_orientation="horizontal"
        app:cv_scrollMode="paged"
        app:cv_inDateStyle="firstMonth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_calendar_title" />

    <TextView
        android:id="@+id/tv_record_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="39dp"
        android:text="@string/calendar_record_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar_view" />

    <ImageView
        android:id="@+id/iv_tooltip"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/description_calendar_tooltip"
        app:layout_constraintTop_toTopOf="@+id/tv_record_title"
        app:layout_constraintBottom_toBottomOf="@+id/tv_record_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_question_circle"/>

    <TextView
        android:id="@+id/tv_record_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/calendar_record_date"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_record_title"
        app:layout_constraintStart_toStartOf="@+id/tv_record_title" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_record_date" />

    <include
        android:id="@+id/layout_empty"
        layout="@layout/calendar_empty_pill_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_record_date"
        tools:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>