<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/background_orange"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_join_pillit_logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/ic_main" />

    <TextView
        android:id="@+id/tv_join_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_message"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:gravity="center"
        android:layout_marginTop="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_join_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BorderEditText"
        app:errorEnabled="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="70dp" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_join_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputEditTextStyle"
            android:hint="@string/join_nickname_hint"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_join_confirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/selector_rounded_button"
        android:enabled="false"
        android:paddingVertical="13dp"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="16dp" />

</LinearLayout>